Use AutoValue to generate DrasylConfig class